...
            child: SingleChildScrollView(
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  ReactiveDropdownField<String>(
                    formControlName: 'paymentMethod',
                    key: const Key('payment_method_dropdown'),
                    decoration: const InputDecoration(labelText: 'Forma de pagamento'),
                    items: const [
                      DropdownMenuItem(value: pix, child: Text('Pix')),
                      DropdownMenuItem(value: card, child: Text('Cartão de Crédito/Débito')),
                      DropdownMenuItem(value: boleto, child: Text('Boleto')),
                    ],
                    validationMessages: widget.useCase.validationMessages('paymentMethod'),
                  ),
                  const SizedBox(height: 20),
                  _buildDeliveryDateField(form),
                  const SizedBox(height: 20),
...
                  ),
                  const SizedBox(height: 40),
                  Center(
                    child: ZemaButtonComponent(
                      label: 'Avançar para Pagamento',
                      buttonName: 'proximo_form3',
                      key: const Key('proximo_form3_button'),
                      action: () {
                        if (form.valid) {
                          final paymentInfo = widget.useCase.toEntity(form);
                          Navigator.pushNamed(
                            context,
                            AppRoutes.form4,
...
    );
  }

  Widget _buildDeliveryDateField(FormGroup form) {
    return ReactiveFormField<DateTime, DateTime>(
      formControlName: 'deliveryDate',
      key: const Key('delivery_date_field'),
      builder: (field) => Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          ListTile(
            title: const Text('Data de Envio'),
            subtitle: Text(
...
  Widget _buildTermsCheckbox(FormGroup form) {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        ReactiveCheckboxListTile(
          formControlName: 'agreeToTerms',
          key: const Key('agree_to_terms_checkbox'),
          title: const Text('Li e concordo com os termos e condições'),
        ),
        if (form.control('agreeToTerms').invalid && form.control('agreeToTerms').touched)
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 16.0),
            child: Text(
...
